Fix drawingtools and tools menu item vertical alignment

--- a/src/app/drawingtools/drawingtools.component.css
+++ b/src/app/drawingtools/drawingtools.component.css
@@ -1,3 +1,9 @@
 .drawingTools .text {
     margin-right: 1em;
 }
+
+.drawingtools-menu-item {
+    display: flex;
+    align-items: center;
+    gap:.5em;
+}
